# 8-Bits-of-Image-Processing

8-Bits-Image-Processing/: CMakeLists.txt  main.cpp
